Ported goals to 26.1.x