@@ -11,10 +11,10 @@ import net.minecraft.world.phys.Vec3;
 import net.neoforged.neoforge.common.Tags;
 import net.neoforged.neoforge.network.PacketDistributor;
 import twilightforest.components.entity.YetiThrowAttachment;
-import twilightforest.data.tags.EntityTagGenerator;
 import twilightforest.events.HostileMountEvents;
 import twilightforest.init.TFDataAttachments;
 import twilightforest.network.MovePlayerPacket;
+import twilightforest.tags.TFEntityTypeTags;
 
 public class ThrowRiderGoal extends MeleeAttackGoal {
 
@@ -30,7 +30,7 @@ public class ThrowRiderGoal extends MeleeAttackGoal {
 	public boolean canUse() {
 		return this.mob.getPassengers().isEmpty() &&
 			this.mob.getTarget() != null &&
-			!this.mob.getTarget().getType().is(Tags.EntityTypes.BOSSES) &&
+			!this.mob.getTarget().is(Tags.EntityTypes.BOSSES) &&
 			this.mob.getTarget().getData(TFDataAttachments.YETI_THROWING).getThrowCooldown() <= 0 &&
 			super.canUse();
 	}
@@ -38,7 +38,7 @@ public class ThrowRiderGoal extends MeleeAttackGoal {
 	@Override
 	public void start() {
 		this.throwTimer = 10 + this.mob.getRandom().nextInt(30); // Wait 0.5 to 2 seconds before we throw the target
-		this.timeout = 80 + this.mob.getRandom().nextInt(40); // Lets only try to chase for around 4-6 seconds
+		this.timeout = 80 + this.mob.getRandom().nextInt(40); // Let only try to chase for around 4-6 seconds
 		super.start();
 	}
 
@@ -61,11 +61,11 @@ public class ThrowRiderGoal extends MeleeAttackGoal {
 			if (this.mob.getPassengers().isEmpty()) {
 				var v = victim.getVehicle();
 
-				if (v == null || !v.getType().is(EntityTagGenerator.RIDES_OBSTRUCT_SNATCHING)) {
+				if (v == null || !v.is(TFEntityTypeTags.RIDES_OBSTRUCT_SNATCHING)) {
 					// Pluck them from the boat, minecart, donkey, or whatever
 					victim.stopRiding();
 
-					victim.startRiding(this.mob, true);
+					victim.startRiding(this.mob, true, false);
 				}
 			}
 		}
@@ -74,7 +74,7 @@ public class ThrowRiderGoal extends MeleeAttackGoal {
 	@Override
 	public void stop() {
 		if (!this.mob.getPassengers().isEmpty()) {
-			Entity rider = this.mob.getPassengers().get(0);
+			Entity rider = this.mob.getPassengers().getFirst();
 			HostileMountEvents.hostileDismount(rider);
 
 			Vec3 throwVec = new Vec3(this.mob.getLookAngle().x() * 2.0D, 0.9, this.mob.getLookAngle().z() * 2.0D);
